# ubuntu_script_bak

./: .vimrc  README.md  bakshell
autoconfig/: autocommit
autoconfig/exam01/: configure.ac
autoconfig/exam02/: Makefile.in  configure.ac
autoconfig/exam03/: Makefile.in  configure.ac
autoconfig/exam04/: Makefile.in  configure.ac  hello_libz.cc  hello_no_libz.cc  program.cc
script_test/: HelloWorld.sh  append.sh  argument_changed.sh  arithmatics_operator.sh  arithmatics_operator2.sh  array.sh  autocommit  bash-trap.sh  changefilename.sh  check_file.sh  global-vs-local-var.sh  if-then-else.sh  parsing-argument.sh  print_format.sh  read_file_into_array.sh  ss2.sh  ss3.sh  ss5.sh  ss6.sh  tput.test.sh  user-input.sh
